// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemName should intially render with content item id 1`] = `
<div>
  
  <span>
    0f590113-9733-4446-abcd-a103d17a2063
  </span>
</div>
`;

exports[`ContentItemName should render and resolve a content item label 1`] = `
<div>
  <span>
    test-content-item-label
  </span>
  
</div>
`;

exports[`ContentItemName should render with content item id when content item fetch throws an error 1`] = `
<div>
  
  <span>
    0f590113-9733-4446-abcd-a103d17a2063
  </span>
</div>
`;
